--- a/front/sme/src/Components/Network.css
+++ b/front/sme/src/Components/Network.css
@@ -16,3 +16,8 @@ body{
 .filters .MuiFormControl-root {
     margin-left: 10px;
 }
+
+#clearBut {
+    color: #0A065D;
+    border-color: #0A065D;
+}
