working on EditProfile page

--- a/front/sme/src/Components/Register.css
+++ b/front/sme/src/Components/Register.css
@@ -27,7 +27,7 @@ body {
 }
 
 .register-section {
-  background-color: #D2C8C8;
+  background-color: white;
   ;
   margin-top: 10px;
   border-radius: 5px;
