--- a/front/sme/src/Components/Navbar.css
+++ b/front/sme/src/Components/Navbar.css
@@ -6,3 +6,9 @@
 #profileBut{
     scale: 200%;
 }
+
+/* .bar{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+} */
