--- a/front/sme/src/Components/EditProfile.css
+++ b/front/sme/src/Components/EditProfile.css
@@ -12,10 +12,29 @@
   margin: 0px 10px 0px 10px;
   padding-bottom: 30px;
 }
+.editprofile-user-type {
+  font-size: 1.3rem;
+  font-weight: normal;
+  position: relative;
+  top: 1.5rem;
+}
+.editprofile-username-display{
+  font-weight: bold;
+  font-size: 2rem;
+  position: relative;
+  top: -9rem;
+  left: 10rem;
+}
+.editprofile-main-photo {
+  height: 180px;
+}
+.editprofile-email-display{
+  font-size:1.5rem;
+}
 .main-menu-title{
   font-weight: bold;
-  font-size: 2.5rem;
-  margin: 30px 0px 50px 0px;
+  font-size: 3rem;
+  margin: 30px 0px 40px 0px;
 }
 .side-menu-icon{
   height: 1.5rem;
